--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: playground-ingress
+  name: playground-deployment
   namespace: dev
 spec:
   entryPoints:
