--- a/deployment.yaml
+++ b/deployment.yaml
@@ -36,5 +36,5 @@ spec:
       match: Host(`192.168.56.162`) # && Path(`test`)
       priority: 10
       services:
-        - name: playground-ingress
+        - name: playground-deployment
           port: 8888
