--- a/deployment.yaml
+++ b/deployment.yaml
@@ -43,10 +43,10 @@ metadata:
   namespace: dev
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
-      match: Host(`192.168.56.162`) # && Path(`test`)
+      match: Host(`192.168.56.162`) && Path(`test`)
       priority: 10
       services:
         - name: playground-deployment
