--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,6 @@ spec:
   selector:
     matchLabels:
       app: playground-deployment
-  replicas: 3
   template:
     metadata:
       labels:
@@ -14,7 +13,7 @@ spec:
     spec:
       containers:
         - name: playground-deployment
-          image: will42/playground:v1
+          image: wil42/playground:v1
 ---
 apiVersion: v1
 kind: Service
