--- a/deployment.yaml
+++ b/deployment.yaml
@@ -32,10 +32,11 @@ metadata:
   name: playground-deployment
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
   - kind: Rule
     match: Path(`/wakkapp`)
+    priority: 1
     services:
     - kind: Service
       name: playground-deployment
